--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "music-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security"
+    "name": "music-api",
+    "version": "1.0.0",
+    "description": "Spotify-like music server for streaming music from Ubuntu server",
+    "main": "server.js",
+    "scripts": {
+      "start": "node server.js",
+      "dev": "nodemon server.js"
+    },
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "multer": "^1.4.5-lts.1",
+      "music-metadata": "^7.13.4",
+      "pg": "^8.11.3"
+    },
+    "devDependencies": {
+      "nodemon": "^3.0.1"
+    }
   }
-}
