--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "fs": "^0.0.1-security",
+        "https": "^1.0.0",
         "multer": "^1.4.5-lts.1",
         "music-metadata": "^7.14.0",
         "node-id3": "^0.2.8",
+        "path": "^0.12.7",
         "pg": "^8.11.3",
         "sharp": "^0.33.5"
     },
